--- a/docs/templates/api.hbs
+++ b/docs/templates/api.hbs
@@ -9,8 +9,7 @@
 <!-------------------------------------------------------------------->
 
 # Kafka Test Helper APIs
-## Index
 {{>main-index~}}
 
-## Specs
+# Specs
 {{>all-docs~}}
